kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  hostnames: ["grafana.${SECRET_DOMAIN}"]
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-oauth-users
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-grafana
          namespace: observability
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
